ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - damodaram-ai.ddns.net
    secretName: rag-tls
  rules:
  - host: damodaram-ai.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rag-app
            port:
              number: 80
